# trojan-rs

./: Cargo.toml  route.txt
examples/: socks5.rs
src/: config.rs  error.rs  lib.rs  route.rs  socks5.rs  tls.rs  trojan.rs  util.rs
src/socks5/: acceptor.rs  listener.rs  mod.rs  stream.rs  target.rs  udp.rs
src/tls/: mod.rs  openssl.rs
src/tls/openssl/: connector.rs  mod.rs  verify.rs
src/trojan/: client.rs  mod.rs
tests/: client.json  config.rs  forward.json  server.json
tests/json/: nat.json
