[package]
name = "trojan"
version = "0.1.0"
authors = ["南浦月 <nanpuyue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.36"
clap = "2.33.1"
libc = "0.2.72"
openssl = "0.10.30"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["serde_derive"] }
serde_json = "1.0.56"
tokio = { version = "0.2.21", features = ["dns", "io-util", "macros", "rt-threaded", "stream", "tcp", "udp"] }
tokio-openssl = "0.4.0"
