[package]
name = "trojan"
version = "0.2.0"
authors = ["南浦月 <nanpuyue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
clap = "2.33.3"
libc = "0.2.97"
mio = "0.7.13"
openssl = "0.10.35"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["serde_derive"] }
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["io-util", "macros", "rt-multi-thread", "net"] }
tokio-openssl = "0.6.2"
tokio-stream = "0.1.6"
